# mpc-demo-infra

./: .dockerignore  .env.client_cli  .env.client_cli.example  .env.consumer_api  .env.consumer_api.example  .env.coord  .env.coord.example  .env.party.example  .gitignore  .gitmodules  README.md  config-docker-compose.py  configure.py  coordination.db  cron_consumer_api.sh  gen-self-signed-cert.sh  kill-all-servers.sh  kill-servers.sh  notary.crt  pyproject.toml  run_all_servers.sh  run_servers.sh  setup_env.sh  shutdown-all-servers.sh  shutdown_all_servers.sh  start-all-servers.sh  test.sh
.github/worflows/: test.yml
.github/workflows/: client_cli-binaries.yml  release-client_cli.yml  release-share_data.yml  share_data-binaries.yml  test.yml
MP-SPDZ/: .gitignore  Makefile  README.md
MP-SPDZ/DevConDemo/: README.md  demo-client-input.py  demo-client-output.py
MP-SPDZ/ExternalDemo/: README.md  demo-client-output.py  demo-client.cpp  demo-client.py
MP-SPDZ/ExternalStats/: Client.hpp  README.md  stats-client.cpp
MP-SPDZ/Networking/: CryptoPlayer.h  ssl_sockets.h
MP-SPDZ/Programs/Source/: demo-client-from-file.mpc  demo-client.mpc  demo_core_initiate.mpc  demo_core_query.mpc  demo_core_save.mpc  query_computation_8013.mpc  share_data_1.mpc  stats-client.mpc  stats-noclient.mpc
MP-SPDZ/mpcstats/: README.md  common_lib.py  config.py  main.py  mpcstats_lib.py  output_parser.py
MP-SPDZ/mpcstats/benchmark/: .gitignore  Makefile  README.md  benchmarker.py  compile.py  constants.py  driver.py  executor.py  gen_comp_defs.py  gen_dataset.py  gen_vms.py  protocols.py
MP-SPDZ/mpcstats/tests/: lib.py  test_ops.py
mpc_demo_infra/: constants.py  logger_config.py
mpc_demo_infra/client/: __init__.py  lib.py
mpc_demo_infra/client_cli/: .env.client_cli  README.md  config.py  main.py
mpc_demo_infra/client_cli/binary/: .gitignore  share-data.py  share-data.sh
mpc_demo_infra/client_cli/docker/: .env.client_cli  .gitignore  Dockerfile  README.md  build.sh  facade.sh  query-mean.sh  query-results.sh  query-sum.sh  share-data.sh
mpc_demo_infra/client_lib/: client.py  client.py.bak  domains.py  lib.py
mpc_demo_infra/computation_party_server/: config.py  database.py  limiter.py  main.py  middleware.py  routes.py  schemas.py
mpc_demo_infra/computation_party_server/docker/: .env.party  .gitignore  CONFIG.mine  Dockerfile  README.md
mpc_demo_infra/coordination_server/: config.py  database.py  limiter.py  main.py  middleware.py  routes.py  schemas.py  user_queue.py
mpc_demo_infra/coordination_server/docker/: .env.coord  (+4 more)
mpc_demo_infra/data_consumer_api/: config.py  main.py  routes.py
mpc_demo_infra/program/: query_computation.mpc  share_data.mpc
tests/: common.py  proof.json  proof230.json  proof_1.json  proof_2.json  proof_3.json  proof_4.json  proof_5.json  secret.json  secret_1.json  secret_2.json  secret_3.json  secret_4.json  secret_5.json  test_computation_party_server.py  test_coordination_server.py  test_integration.py  test_user_queue.py
(+37 files in other folders)
