[tool.poetry]
name = "mpc-demo-infra"
version = "0.1.0"
description = ""
authors = ["mhchia <kevin.mh.chia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^1.4.0"
pydantic = "^1.10.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coordination-server-create-tables = "mpc_demo_infra.coordination_server.database:create_tables"
coordination-server-run = "mpc_demo_infra.coordination_server.main:run"
