[tool.poetry]
name = "mpc-demo-infra"
version = "0.1.0"
description = ""
authors = ["mhchia <kevin.mh.chia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^1.4.0"
pydantic = "^1.10.0"
python-dotenv = "^1.0.0"
requests = "^2.32.3"
aiohttp = "^3.10.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.24.0"
gmpy2 = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coordination-server-create-tables = "mpc_demo_infra.coordination_server.database:create_tables"
coordination-server-run = "mpc_demo_infra.coordination_server.main:run"
computation-party-server-create-tables = "mpc_demo_infra.computation_party_server.database:create_tables"
computation-party-server-run = "mpc_demo_infra.computation_party_server.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"
