[tool.poetry]
name = "mpc-demo-infra"
version = "0.1.0"
description = ""
authors = ["mhchia <kevin.mh.chia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^1.4.0"
pydantic = "^1.10.0"
python-dotenv = "^1.0.0"
requests = "^2.32.3"
aiohttp = "^3.10.9"
slowapi = "^0.1.9"

readerwriterlock = "^1.0.9"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.24.0"
gmpy2 = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coord-run = "mpc_demo_infra.coordination_server.main:run"
coord-list-shared-data = "mpc_demo_infra.coordination_server.main:list_mpc_sessions"
gen-api-key = "mpc_demo_infra.coordination_server.main:gen_party_api_key"
party-run = "mpc_demo_infra.computation_party_server.main:run"
client-share-data = "mpc_demo_infra.client_cli.main:notarize_and_share_data_cli"
client-query = "mpc_demo_infra.client_cli.main:query_computation_and_verify_cli"
consumer-api-run = "mpc_demo_infra.data_consumer_api.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"
